<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/constraint_layout">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Box0ne"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="@dimen/margin_wide"
            android:layout_marginRight="@dimen/margin_wide"
            style="@style/WhiteBox"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/box1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/box2"/>
    <TextView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box2"
            style="@style/WhiteBox"
            android:text="@string/BoxTwo"
            app:layout_constraintTop_toBottomOf="@+id/box1" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/BoxThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box3"
            style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box5"
            app:layout_constraintTop_toTopOf="@+id/box2"
            app:layout_constraintStart_toEndOf="@+id/box2"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/BoxFour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box4"
            style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box3"
            app:layout_constraintBottom_toTopOf="@+id/box5"
            app:layout_constraintStart_toEndOf="@+id/box2"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/BoxFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/box5"
            style="@style/WhiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box2"
            app:layout_constraintStart_toEndOf="@+id/box2"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/redcolor"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            android:background="@color/colorRed"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/yellowcolor"
            android:layout_width="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorYellow"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/red_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/blue_button" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginTop="124dp"
            app:layout_constraintTop_toBottomOf="@+id/box5"/>
    <Button
            android:text="@string/bluecolor"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blue_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/yellow_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>